[package]
name = "ironwire"
version = "4.5.0"
edition = "2021"
authors = ["khaninkali · HyperSecurity Offensive Labs"]
description = "IronWire — Packets don't lie, but they do get lost"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
chrono = "0.4"
pnet = "0.35"
libc = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
overflow-checks = false
debug = false
debug-assertions = false
incremental = false
